--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: c
 sudo: false # only for faster builds
 script:
+  - uname -a
+  - echo $USER
   - clang -coverage -O0 hello.c -o hello
   - ./hello
   - gcov hello.c
